--- a/Positionierung.tex
+++ b/Positionierung.tex
@@ -22,7 +22,6 @@
     Indoor Positionierungssysteme werden derzeit vor allem zur Objekterkennung, im Umweltmonitoring, über das Detektieren von Bränden in Gebäuden, bis hin zum Einsatz in der Logistik, verwendet. Da es sehr viele unterschiedliche Anwendungsgebiete\cite{posAnwendung} gibt, werden unterschiedliche Methoden verwendet. 
 
     \subsection{Eigenschaften der Positionsbestimmung}
-
     Ein Positionierungssystem kann verschiedene Arten von Informationsdaten\cite{pos_eigenschaften} aufweisen. 
 
     \subsection*{Physische und symbolische Positionierung}
@@ -61,12 +60,11 @@
 
     \begin{figure}[H]
       \begin{centering}   
-        \subfigure[Objekt]{\includegraphics[width = 0.4\textwidth]{Bilder/bor_selbst_fern}}
+        \includegraphics[width = 0.7\textwidth]{Bilder/bor_selbst_fern}}
       \par\end{centering}
-      \caption{Selbstortendes und fernortende Lokalisierung}
+      \caption{Selbstortende und fernortende Lokalisierung}
       \label{SelbstundFernortend}
     \end{figure}
-
 
     \subsection*{Genauigkeit}
     Die Genauigkeit gibt an, wie sehr sich gemessene und tatsächliche Position unterscheiden.
@@ -122,7 +120,7 @@
     \subsection*{Phasenverschiebung}
     Bei der Phasenverschiebung\cite{akustischeverfahren} wird ein kontinuierliches Ultraschallsignal gesendet. Nachdem die Welle reflektiert wurde, wird sie ebenfalls von einem Empfänger aufgenommen. Die Phasenverschiebung kann nun zwischen gesendetem Referenzsignal und empfangenem Signal gemessen werden. Mithilfe dieser Information ist es möglich Laufzeit und zurückgelegte Distanz abzuleiten. 
 
-    \subsubsection{Akustische Technologien}
+    \subsection{Akustische Technologien}
     \subsection*{Ultraschall}
     Ein Ultraschallsensor ist Sender und Empfänger in einem. Das System basiert auf der Zeitdifferenzmessung. Er sendet ein Signal, dieses wird reflektiert und anschließend empfängt der Sensor sein eigenes Echo. Mithilfe der Ausbreitungsgeschwindigkeit akustischer Wellen, ist es möglich Entfernungen zu messen. Die Zeit, die ein Signal zum zu messenden Objekt und wieder zurück braucht, nennt man Laufzeit, da die Strecke doppelt gemessen wird, wird die Zeit halbiert.
 
