--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -393,14 +393,14 @@ Ein großes Dankeschön auch an den Verein Practical Robotics Institute Austria 
 
 Durch Natalia Zmajkovicova von der \textbf{twyn group} haben wir die Marketingwelt besser kennengelernt.
 
-Tina Lentschik von \textbf{WebBoost} hat uns Tipps und Tricks zu \cite{SEO} verraten, dadurch konnte unser Blog optimiert werden. 
+Tina Lentschik von \textbf{WebBoost} hat uns Tipps und Tricks zu SEO verraten, dadurch konnte unser Blog optimiert werden. 
 
-Durch \textbf{LivingPhotos by Michael Pyerin} wurden Team- und Portraitfotos aufgenommen, die das Team für Marketingzwecke auf Sozialen Medien und dem Blog genützt hat.
+Durch \textbf{LivingPhotos by Michael Pyerin} wurden Team- und Portraitfotos aufgenommen, die das Team für Marketingzwecke in sozialen Medien und dem Blog genützt hat.
 
 
 Folgende Personen haben uns während der Diplomarbeit unterstützt, ein großes Dankeschön!
 
-Lars Paasche von der TU Berlin hat bei der Ideeentwicklung geholfen. Durch sein Wissen konnte er technische Fragen beantwortet und bei Problemen helfen.
+Lars Paasche von der TU Berlin hat bei der Ideeentwicklung geholfen. Durch sein Wissen konnte er technische Fragen beantworten und bei Problemen helfen.
 
 Martin Zimmermann, Schüler der HTL Rennweg, hat uns bei Fragen bezüglich Multicoptern weitergeholfen.
 
@@ -408,11 +408,11 @@ Manuel Zika, Absolvent der HTL Rennweg hat uns netzwerktechnische Fragen beantwo
 
 Felix Lucny, Absolvent der HTL Rennweg, hat bei Problemen mit Frameworks geholfen.
 
-Auch John Kulha, Schüler der HTL Rennweg, ist uns bei technischen Fragen rund um Java zur Seite gestanden.
+John Kulha, Schüler der HTL Rennweg, ist uns bei technischen Fragen rund um Java zur Seite gestanden.
 
 Danke an das Space Team der TU Wien, das uns in der Planungsphase mit Wissen über Positionierungssysteme geholfen hat.
 
-Danke an Roman Marchel, Deutschtrainer und freier Schriftsteller, hat uns bei der Korrektur des Diplomarbeitsbuchs unterstützt.
+Danke an Roman Marchel, Deutschtrainer und freier Schriftsteller, der uns bei der Korrektur des Diplomarbeitsbuchs unterstützt hat.
 
 Durch Wolfram Bornberg wurden die Grundlagen von Mikrocontrollern erlernt.
 
