--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -261,13 +261,13 @@ Wien, \today
 % Auf Seiten mit einem neuen Kapitel ist keine Kopfzeile -- kann man sich aber wünschen
 \thispagestyle{fancy}
 
-Hinter dem Projekt steht die Idee ein innovatives Logistiksystem, basierend auf einer autonom fliegenden Drohne zu erfinden, und in der Gastronomiebranche einzusetzen.
+Hinter dem Projekt steht die Idee, ein innovatives Logistiksystem, basierend auf einer autonom fliegenden Drohne, zu erfinden und in der Gastronomiebranche einzusetzen.
 
 Das Hauptziel ist die Erarbeitung einer Konzeptstudie, die einen möglichen Weg zur Umsetzung einer automatisch fliegenden Bedienung zeigt. Zusätzlich dazu
 soll eine digitale Speisekarte das automatische System erweitern. Optional wird ein Event organisiert, um das System in der Praxis zu testen.
 
-Um die Ziele des Projekts zu ereichen, wurde eine umfangreiche Recherche durchgeführt. Zu Begin wurde nach bereits existierenden, ähnlichen Projekten gesucht, um weiters
-diese zu analysieren, und eine Übersicht über den Stand der verwendbaren Technologien zu bekommen. Im folgenden Schritt wurde ein Konzept für jede, für dieses Projekt
+Um die Ziele des Projekts zu ereichen, wurde eine umfangreiche Recherche durchgeführt. Zu Beginn wurde nach bereits existierenden, ähnlichen Projekten gesucht, um weiters
+diese zu analysieren und eine Übersicht über den Stand der verwendbaren Technologien zu bekommen. Im folgenden Schritt wurde ein Konzept für jede, für dieses Projekt
 gewählte Technologie erstellt. Zuletzt wurde jedes erarbeitete Konzept getestet, um die Funktionalität dieser sicherzustellen.
 
 Alle Vorteile und Hindernisse in Betracht gezogen, lässt sich sagen, dass das Projekt aus einer Vielzahl verschiedener Komponenten besteht, dessen perfekte Zusammenarbeit Vorraussetzung
@@ -393,7 +393,7 @@ Ein großes Dankeschön auch an den Verein Practical Robotics Institute Austria 
 
 Durch Natalia Zmajkovicova von der \textbf{twyn group} haben wir die Marketingwelt besser kennengelernt.
 
-Tina Lentschik von \textbf{WebBoost} hat uns Tipps und Tricks zu SEO verraten, dadurch konnte unser Blog optimiert werden. 
+Tina Lentschik von \textbf{WebBoost} hat uns Tipps und Tricks zu SEO verraten, dadurch konnte unser Blog optimiert werden.
 
 Durch \textbf{LivingPhotos by Michael Pyerin} wurden Team- und Portraitfotos aufgenommen, die das Team für Marketingzwecke in sozialen Medien und dem Blog genützt hat.
 
@@ -404,7 +404,7 @@ Lars Paasche von der TU Berlin hat bei der Ideeentwicklung geholfen. Durch sein 
 
 Martin Zimmermann, Schüler der HTL Rennweg, hat uns bei Fragen bezüglich Multicoptern weitergeholfen.
 
-Manuel Zika, Absolvent der HTL Rennweg hat uns netzwerktechnische Fragen beantwortet. 
+Manuel Zika, Absolvent der HTL Rennweg hat uns netzwerktechnische Fragen beantwortet.
 
 Felix Lucny, Absolvent der HTL Rennweg, hat bei Problemen mit Frameworks geholfen.
 
