positionierung ausgebessert (auch mit word - nicht mehr verändern!!!!!! ) diplom.bib: quelle hinzugefügt, auch schon auf drive :) hihi bin ein streber xD

--- a/diplom.bib
+++ b/diplom.bib
@@ -547,6 +547,13 @@
 	title = {JDBC-Tutorial}
 }
 
+%chrisy{
+@online{PIXY_Porting,
+	lastchecked = {2016-05-06},
+	url = {http://cmucam.org/projects/cmucam5/wiki/Porting_Guide},
+	title = {How to talk to Pixy}
+}
+
 %chrisy
 @online{Vicon,
 	lastchecked = {2016-03-03},
